--- a/css/prefixed.css
+++ b/css/prefixed.css
@@ -6,13 +6,15 @@
 html {
 	font-family: 'Roboto', sans-serif;
 }
+/*nav*/
 nav {	
 	position: fixed;	
 	top:0;
 	width: 100%;	
 	background-color: #222;			
 	box-shadow: 0 4px 10px -2px #aaa;
-	/*height: 200px;*/
+	-webkit-transition: .2s;
+	transition: .2s;
 }
 nav ul {
 	display: -webkit-box;
@@ -52,22 +54,89 @@ nav ul li:first-child a {
 	padding: 0;	
 	box-shadow: none;
 }
-	.btn-1 {
-	  background-image: -webkit-gradient(linear, right top, left top, from(#b3b3ff), color-stop(51%, #bebeff), to(#ccccff));
-	  background-image: linear-gradient(-90deg, #b3b3ff 0%, #bebeff 51%, #ccccff 100%);
-	}
-	.btn-2 {
-	  background-image: -webkit-gradient(linear, right top, left top, from(#9999ff), color-stop(51%, #a6a6ff), to(#b3b3ff));
-	  background-image: linear-gradient(-90deg, #9999ff 0%, #a6a6ff 51%, #b3b3ff 100%);
-	}
-	.btn-3 {
-	  background-image: -webkit-gradient(linear, right top, left top, from(#8080ff),  color-stop(51%, #8c8cff), to(#9999ff));
-	  background-image: linear-gradient(-90deg, #8080ff 0%,  #8c8cff 51%, #9999ff 100%);
-	}
-	.btn-4 {
-	  background-image: -webkit-gradient(linear, right top, left top, from(#6666ff), color-stop(51%, #7575ff), to(#8080ff));
-	  background-image: linear-gradient(-90deg, #6666ff 0%, #7575ff 51%, #8080ff 100%);
-	}
+.btn-1 {
+  background-image: -webkit-gradient(linear, right top, left top, from(#b3b3ff), color-stop(51%, #bebeff), to(#ccccff));
+  background-image: linear-gradient(-90deg, #b3b3ff 0%, #bebeff 51%, #ccccff 100%);
+}
+.btn-2 {
+  background-image: -webkit-gradient(linear, right top, left top, from(#9999ff), color-stop(51%, #a6a6ff), to(#b3b3ff));
+  background-image: linear-gradient(-90deg, #9999ff 0%, #a6a6ff 51%, #b3b3ff 100%);
+}
+.btn-3 {
+  background-image: -webkit-gradient(linear, right top, left top, from(#8080ff),  color-stop(51%, #8c8cff), to(#9999ff));
+  background-image: linear-gradient(-90deg, #8080ff 0%,  #8c8cff 51%, #9999ff 100%);
+}
+.btn-4 {
+  background-image: -webkit-gradient(linear, right top, left top, from(#6666ff), color-stop(51%, #7575ff), to(#8080ff));
+  background-image: linear-gradient(-90deg, #6666ff 0%, #7575ff 51%, #8080ff 100%);
+}	
 nav ul li a:hover {  		
-  	background-position: right center;
-  }
+ 	background-position: right center;
+ 	-webkit-transform: scale(1.05);
+ 	    -ms-transform: scale(1.05);
+ 	        transform: scale(1.05);
+ 	box-shadow: 0 0 25px #aaa;
+}
+@media(max-width: 1024px){
+	.burger {		
+	 	position: fixed;
+		display: block;
+	 	top: 50px;
+	 	right: 50px; 	
+	 	width: 60px;
+	 	height: 40px;
+	 	-webkit-transition: .2s;
+	 	transition: .2s;
+	 	z-index: 1; 	
+	}
+	.burger span {
+	 	position: absolute;
+	 	width: 100%;
+	 	height: 8px;
+	 	background-color: #8080ff;
+	 	left: 0;
+	 	border-radius: 6px;
+	 	-webkit-transition: top .2s .2s, bottom .2s .2s, opacity .2s .2s, -webkit-transform .2s .2s;
+	 	transition: top .2s .2s, bottom .2s .2s, opacity .2s .2s, -webkit-transform .2s .2s;
+	 	transition: top .2s .2s, bottom .2s .2s, opacity .2s .2s, transform .2s .2s;
+	 	transition: top .2s .2s, bottom .2s .2s, opacity .2s .2s, transform .2s .2s, -webkit-transform .2s .2s;
+	}
+	.burger span:nth-child(1) {
+	 	top: 0;
+	}
+	.burger.active span:nth-child(1) {
+	 	top: 50%;
+	 	-webkit-transform: translateY(-50%) rotate(45deg);
+	 	    -ms-transform: translateY(-50%) rotate(45deg);
+	 	        transform: translateY(-50%) rotate(45deg);
+	}
+	.burger span:nth-child(2) {
+	 	top: 50%;
+	 	-webkit-transform: translateY(-50%);
+	 	    -ms-transform: translateY(-50%);
+	 	        transform: translateY(-50%);
+	}
+	.burger.active span:nth-child(2) {
+	 	opacity: 0;
+	}
+	.burger span:nth-child(3) {
+	 	bottom: 0;
+	}
+	.burger.active span:nth-child(3) {
+	 	top: 50%;
+	 	-webkit-transform: translateY(-50%) rotate(-45deg);
+	 	    -ms-transform: translateY(-50%) rotate(-45deg);
+	 	        transform: translateY(-50%) rotate(-45deg);
+	}
+	.burger.active {
+		-webkit-transform: rotate(-90deg);
+		    -ms-transform: rotate(-90deg);
+		        transform: rotate(-90deg);
+	}
+	nav {		
+	 	top: -250px;	
+	}
+	nav.active {
+		top: 0px;
+	}
+}
