--- a/css/style.css
+++ b/css/style.css
@@ -6,19 +6,21 @@
 html {
 	font-family: 'Roboto', sans-serif;
 }
+/*nav*/
 nav {	
 	position: fixed;	
 	top:0;
 	width: 100%;	
 	background-color: #222;			
 	box-shadow: 0 4px 10px -2px #aaa;
-	/*height: 200px;*/
+	transition: .3s;
 }
 nav ul {
 	display: flex;
 	max-width: 1280px;
 	list-style: none;
 	margin: 0 auto;
+	padding-right: 20px;
 }
 nav ul li {
 	flex-basis: 20%;	
@@ -43,18 +45,149 @@ nav ul li:first-child a {
 	padding: 0;	
 	box-shadow: none;
 }
-	.btn-1 {
-	  background-image: linear-gradient(-90deg, #b3b3ff 0%, #bebeff 51%, #ccccff 100%);
-	}
-	.btn-2 {
-	  background-image: linear-gradient(-90deg, #9999ff 0%, #a6a6ff 51%, #b3b3ff 100%);
-	}
-	.btn-3 {
-	  background-image: linear-gradient(-90deg, #8080ff 0%,  #8c8cff 51%, #9999ff 100%);
-	}
-	.btn-4 {
-	  background-image: linear-gradient(-90deg, #6666ff 0%, #7575ff 51%, #8080ff 100%);
-	}
+.btn-1 {
+  background-image: linear-gradient(-90deg, #b3b3ff 0%, #bebeff 51%, #ccccff 100%);
+}
+.btn-2 {
+  background-image: linear-gradient(-90deg, #9999ff 0%, #a6a6ff 51%, #b3b3ff 100%);
+}
+.btn-3 {
+  background-image: linear-gradient(-90deg, #8080ff 0%,  #8c8cff 51%, #9999ff 100%);
+}
+.btn-4 {
+  background-image: linear-gradient(-90deg, #6666ff 0%, #7575ff 51%, #8080ff 100%);
+}	
 nav ul li a:hover {  		
-  	background-position: right center;
-  }
+ 	background-position: right center;
+ 	transform: scale(1.05);
+ 	box-shadow: 0 0 25px #aaa;
+}
+.minilogo {
+	display: none;
+}
+@media(max-width: 1024px){
+	.navigation {
+		background-color: #333;
+		height: 140px;
+		width: 100%;
+		box-shadow: 0 4px 10px -2px #aaa;
+	}
+	.minilogo {
+		display: block;
+		position: relative;
+		top: 0;
+		left: 0;	
+		padding: 20px;	
+	}
+	.burger {		
+	 	position: fixed;
+		display: block;
+	 	top: 50px;
+	 	right: 50px; 	
+	 	width: 60px;
+	 	height: 40px;
+	 	transition: .2s;
+	 	z-index: 1; 	
+	}
+	.burger span {
+	 	position: absolute;
+	 	width: 100%;
+	 	height: 8px;
+	 	background-color: #8080ff;
+	 	left: 0;
+	 	border-radius: 6px;
+	 	transition: top .2s .2s, bottom .2s .2s, opacity .2s .2s, transform .2s .2s;
+	}
+	.burger span:nth-child(1) {
+	 	top: 0;
+	}
+	.burger.active span:nth-child(1) {
+	 	top: 50%;
+	 	transform: translateY(-50%) rotate(45deg);
+	}
+	.burger span:nth-child(2) {
+	 	top: 50%;
+	 	transform: translateY(-50%);
+	}
+	.burger.active span:nth-child(2) {
+	 	opacity: 0;
+	}
+	.burger span:nth-child(3) {
+	 	bottom: 0;
+	}
+	.burger.active span:nth-child(3) {
+	 	top: 50%;
+	 	transform: translateY(-50%) rotate(-45deg);
+	}
+	.burger.active {
+		transform: rotate(-90deg);
+	}
+	nav {		
+	 	top: -250px;	
+	}
+	nav.active {
+		top: 0px;
+	}
+	nav ul li {
+	flex-basis: 20%;	
+	align-self: flex-end;
+}
+@media(max-width: 870px) {
+	nav ul {
+		flex-direction: column;
+	}
+	nav ul li {
+		flex-basis: 20%;	
+		align-self: center;
+	}
+	nav ul li a {	
+		margin: 10px;
+		padding: 10px 20px;
+		font-size: 16px;	  			  	
+	}
+	nav ul li:first-child a {
+		margin: 5px;
+	}
+	nav {		
+	 	top: -730px;	
+	}
+}
+@media(max-width: 420px) and (orientation: portrait) {
+	nav ul {
+		height: 100vh;
+		padding: 0px;
+	}
+	nav ul li a {	
+		padding: 20px;
+		font-size: 22px;	  			  	
+	}
+	nav {		
+	 	top: -100vh;	
+	}
+}
+@media(max-width: 320px) and (orientation: portrait) {
+	nav ul {
+		height: 100vh;
+		padding: 0px;
+	}
+	nav ul li a {	
+		padding: 15px;
+		font-size: 20px;	  			  	
+	}
+}
+@media(max-width: 825px) and (orientation: landscape) {
+	nav ul {
+		height: 100vh;
+		padding: 0px;
+	}
+	nav ul li a {	
+		margin: 5px;
+		padding: 10px;
+		font-size: 14px;	  			  	
+	}
+	nav ul li:first-child a {
+		margin: -45px;
+		padding: 10px;
+		transform: scale(0.6);
+	}
+}
