--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,11 @@ html {
 }
 /*nav*/
 nav {	
-	position: fixed;	
-	top:0;
-	width: 100%;	
+	position: fixed;
+	top: 0;
+	height: 240px;
+	left: 0;
+	right: 0;	
 	background-color: #222;			
 	box-shadow: 0 4px 10px -2px #aaa;
 	transition: .3s;
@@ -38,6 +40,7 @@ nav ul li a {
 	text-align: center;
 	text-decoration: none;
   text-transform: uppercase;
+  letter-spacing: 2px;
   transition: .5s;	  	
 }
 nav ul li:first-child a {
@@ -59,13 +62,15 @@ nav ul li:first-child a {
 }	
 nav ul li a:hover {  		
  	background-position: right center;
- 	transform: scale(1.05);
  	box-shadow: 0 0 25px #aaa;
+}
+nav ul li:first-child a:hover {
+ 	box-shadow: none;
 }
 .minilogo {
 	display: none;
 }
-@media(max-width: 1024px){
+@media(max-width: 1024px) {
 	.navigation {
 		background-color: #333;
 		height: 140px;
@@ -131,6 +136,7 @@ nav ul li a:hover {
 	nav ul li {
 	flex-basis: 20%;	
 	align-self: flex-end;
+	}
 }
 @media(max-width: 870px) {
 	nav ul {
