--- a/css/prefixed.css
+++ b/css/prefixed.css
@@ -176,9 +176,9 @@ nav ul li:first-child a:hover {
 		        flex-direction: column;
 	}
 	nav ul li {
-		-webkit-flex-basis: 20%;
-		    -ms-flex-preferred-size: 20%;
-		        flex-basis: 20%;	
+		-webkit-flex-basis: 15%;
+		    -ms-flex-preferred-size: 15%;
+		        flex-basis: 15%;	
 		-webkit-align-self: center;	
 		    -ms-flex-item-align: center;	
 		            -ms-grid-row-align: center;	
@@ -199,42 +199,32 @@ nav ul li:first-child a:hover {
 @media(max-width: 420px) and (orientation: portrait) {
 	nav ul {
 		height: 100vh;
-		padding: 0px;
+		padding: 0 0 80px 0;
 	}
 	nav ul li a {	
-		padding: 20px;
-		font-size: 22px;	  			  	
+		padding: 12px;
+		font-size: 18px;	  			  	
 	}
 	nav {		
-	 	top: -105vh;	
-	}
-}
-@media(max-width: 320px) and (orientation: portrait) {
-	nav ul {
-		height: 100vh;
-		padding: 0px;
-	}
-	nav ul li a {	
-		padding: 15px;
-		font-size: 20px;	  			  	
+	 	top: -110vh;	
 	}
 }
 @media(max-width: 825px) and (orientation: landscape) {
 	nav ul {
 		height: 100vh;
-		padding: 0px;
+		padding: 0 0 40px 0;
 	}
 	nav ul li a {	
 		margin: 5px;
 		padding: 10px;
-		font-size: 14px;	  			  	
+		font-size: 12px;	  			  	
 	}
 	nav ul li:first-child a {
-		margin: -45px;
+		margin: -65px;
 		padding: 10px;
-		-webkit-transform: scale(0.6);
-		    -ms-transform: scale(0.6);
-		        transform: scale(0.6);
+		-webkit-transform: scale(0.4);
+		    -ms-transform: scale(0.4);
+		        transform: scale(0.4);
 	}
 }
 /*banner*/
