--- a/css/prefixed.css
+++ b/css/prefixed.css
@@ -16,11 +16,12 @@ nav {
 	box-shadow: 0 4px 10px -2px #aaa;
 	-webkit-transition: .3s;
 	transition: .3s;
+	z-index: 2;
 }
 nav ul {
+	display: -ms-flexbox;
 	display: -webkit-box;
 	display: -webkit-flex;
-	display: -ms-flexbox;
 	display: flex;
 	max-width: 1280px;
 	list-style: none;
@@ -47,10 +48,10 @@ nav ul li a {
  	border-radius: 10px;
 	text-align: center;
 	text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  -webkit-transition: .5s;
-  transition: .5s;	  	
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	-webkit-transition: .5s;
+	transition: .5s;	  	
 }
 nav ul li:first-child a {
 	margin: 20px;
@@ -58,8 +59,8 @@ nav ul li:first-child a {
 	box-shadow: none;
 }
 .btn-1 {
-  background-image: -webkit-gradient(linear, right top, left top, from(#b3b3ff), color-stop(51%, #bebeff), to(#ccccff));
-  background-image: linear-gradient(-90deg, #b3b3ff 0%, #bebeff 51%, #ccccff 100%);
+	background-image: -webkit-gradient(linear, right top, left top, from(#b3b3ff), color-stop(51%, #bebeff), to(#ccccff));
+	background-image: linear-gradient(-90deg, #b3b3ff 0%, #bebeff 51%, #ccccff 100%);
 }
 .btn-2 {
   background-image: -webkit-gradient(linear, right top, left top, from(#9999ff), color-stop(51%, #a6a6ff), to(#b3b3ff));
@@ -158,13 +159,10 @@ nav ul li:first-child a:hover {
 	nav.active {
 		top: 0px;
 	}
-	nav ul li {
-	-webkit-flex-basis: 20%;
-	    -ms-flex-preferred-size: 20%;
-	        flex-basis: 20%;	
-	-webkit-align-self: flex-end;	
-	    -ms-flex-item-align: end;	
-	        align-self: flex-end;
+	nav ul li {			
+		-webkit-align-self: flex-end;			
+		    -ms-flex-item-align: end;			
+		        align-self: flex-end;
 	}
 }
 @media(max-width: 870px) {
@@ -228,35 +226,53 @@ nav ul li:first-child a:hover {
 	}
 }
 /*banner*/
-/*.banner {
-	margin-top: 240px; 
+.banner {	 
 	position: relative;
-	overflow-x: hidden;	
+	max-width: 1280px;
+	margin: 245px auto 0;
+	width: 100%;
+	height: -webkit-calc(100vh - 245px);
+	height: calc(100vh - 245px);
+	overflow: hidden;
+	background-color: #ccc;
 }
-
-
-.slide h1 {
-	position: relative;
-	text-align: center;
-	top: 100%;
+.banner-image {
+	position: absolute;
+	background-image: url(../images/banner/1.jpg);
+	background-size: cover;
+  background-position: center;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 100vh;
+}
+.banner-text h1 {
+	position: absolute;
+	bottom: 0;
 	left: 50%;
+	-webkit-transform: translateX(-50%);
+	    -ms-transform: translateX(-50%);
+	        transform: translateX(-50%);
+	width: 100%;
+	text-align: center;
 	font-size: 48px;
 	letter-spacing: 6px;
-	transform: translate(-50%, -100%);
+	text-transform: uppercase;
 	background-color: rgba(0, 0, 0, 0.5);
 	color: #fff;
-	text-transform: uppercase;	
+	z-index: 1;
 	padding: 30px
 }
-div.arrow {
-	cursor: pointer;
+div.arrow {	
 	position: absolute;
 	top: 50%;
-	transform: translateY(-50%);
-	width: 0;
-	height: 0;
+	-webkit-transform: translateY(-50%);
+	    -ms-transform: translateY(-50%);
+	        transform: translateY(-50%);
 	font-size: 80px;
 	color: #fff;
+	z-index: 1;
+	cursor: pointer;
 }
 .arrow-left {
 	left: 0;
@@ -265,4 +281,7 @@ div.arrow {
 .arrow-right {
 	right: 0;
 	margin-right: 50px;
-}*/
+}
+section p {
+	line-height: 250%;
+}
