--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,10 @@ nav {
 	background-color: #222;			
 	box-shadow: 0 4px 10px -2px #aaa;
 	transition: .3s;
+	z-index: 2;
 }
 nav ul {
+	display: -ms-flexbox;
 	display: flex;
 	max-width: 1280px;
 	list-style: none;
@@ -38,9 +40,9 @@ nav ul li a {
  	border-radius: 10px;
 	text-align: center;
 	text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  transition: .5s;	  	
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	transition: .5s;	  	
 }
 nav ul li:first-child a {
 	margin: 20px;
@@ -48,7 +50,7 @@ nav ul li:first-child a {
 	box-shadow: none;
 }
 .btn-1 {
-  background-image: linear-gradient(-90deg, #b3b3ff 0%, #bebeff 51%, #ccccff 100%);
+	background-image: linear-gradient(-90deg, #b3b3ff 0%, #bebeff 51%, #ccccff 100%);
 }
 .btn-2 {
   background-image: linear-gradient(-90deg, #9999ff 0%, #a6a6ff 51%, #b3b3ff 100%);
@@ -132,9 +134,8 @@ nav ul li:first-child a:hover {
 	nav.active {
 		top: 0px;
 	}
-	nav ul li {
-	flex-basis: 20%;	
-	align-self: flex-end;
+	nav ul li {			
+		align-self: flex-end;
 	}
 }
 @media(max-width: 870px) {
@@ -187,35 +188,48 @@ nav ul li:first-child a:hover {
 	}
 }
 /*banner*/
-/*.banner {
-	margin-top: 240px; 
+.banner {	 
 	position: relative;
-	overflow-x: hidden;	
+	max-width: 1280px;
+	margin: 245px auto 0;
+	width: 100%;
+	height: calc(100vh - 245px);
+	overflow: hidden;
+	background-color: #ccc;
 }
-
-
-.slide h1 {
-	position: relative;
-	text-align: center;
-	top: 100%;
+.banner-image {
+	position: absolute;
+	background-image: url(../images/banner/1.jpg);
+	background-size: cover;
+  background-position: center;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 100vh;
+}
+.banner-text h1 {
+	position: absolute;
+	bottom: 0;
 	left: 50%;
+	transform: translateX(-50%);
+	width: 100%;
+	text-align: center;
 	font-size: 48px;
 	letter-spacing: 6px;
-	transform: translate(-50%, -100%);
+	text-transform: uppercase;
 	background-color: rgba(0, 0, 0, 0.5);
 	color: #fff;
-	text-transform: uppercase;	
+	z-index: 1;
 	padding: 30px
 }
-div.arrow {
-	cursor: pointer;
+div.arrow {	
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
-	width: 0;
-	height: 0;
 	font-size: 80px;
 	color: #fff;
+	z-index: 1;
+	cursor: pointer;
 }
 .arrow-left {
 	left: 0;
@@ -224,4 +238,7 @@ div.arrow {
 .arrow-right {
 	right: 0;
 	margin-right: 50px;
-}*/
+}
+section p {
+	line-height: 250%;
+}
