--- a/css/prefixed.css
+++ b/css/prefixed.css
@@ -233,18 +233,20 @@ nav ul li:first-child a:hover {
 	width: 100%;
 	height: -webkit-calc(100vh - 245px);
 	height: calc(100vh - 245px);
-	overflow: hidden;
-	background-color: #ccc;
+	overflow: hidden;	
 }
-.banner-image {
+.banner-image {	
 	position: absolute;
-	background-image: url(../images/banner/1.jpg);
-	background-size: cover;
-  background-position: center;
-	top: 0;
-	left: 0;
-	right: 0;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	    -ms-transform: translate(-50%, -50%);
+	        transform: translate(-50%, -50%);
+	width: 100%;
 	height: 100vh;
+	background-color: #000;
+	-webkit-animation: moveImage 4s linear infinite;
+	        animation: moveImage 4s linear infinite;
 }
 .banner-text h1 {
 	position: absolute;
@@ -261,7 +263,10 @@ nav ul li:first-child a:hover {
 	background-color: rgba(0, 0, 0, 0.5);
 	color: #fff;
 	z-index: 1;
-	padding: 30px
+	padding: 30px;
+	-webkit-animation: moveText 4s linear infinite;
+	        animation: moveText 4s linear infinite;
+
 }
 div.arrow {	
 	position: absolute;
@@ -284,4 +289,84 @@ div.arrow {
 }
 section p {
 	line-height: 250%;
+}
+@-webkit-keyframes moveImage {
+	0% {		
+		opacity: 0;
+	}
+	8% {
+		opacity: 0;
+	}
+	13% {
+		opacity: 1;
+	}
+	87% {
+		opacity: 1;
+	}
+	92% {
+		opacity: 0;
+	}
+	100% {		
+		opacity: 0;
+	}
+}
+@keyframes moveImage {
+	0% {		
+		opacity: 0;
+	}
+	8% {
+		opacity: 0;
+	}
+	13% {
+		opacity: 1;
+	}
+	87% {
+		opacity: 1;
+	}
+	92% {
+		opacity: 0;
+	}
+	100% {		
+		opacity: 0;
+	}
+}
+@-webkit-keyframes moveText {
+	0% {		
+		opacity: 0;
+	}
+	10% {
+		opacity: 0;
+	}
+	20% {
+		opacity: 1;
+	}
+	80% {
+		opacity: 1;
+	}
+	90% {
+		opacity: 0;
+	}
+	100% {		
+		opacity: 0;
+	}
+}
+@keyframes moveText {
+	0% {		
+		opacity: 0;
+	}
+	10% {
+		opacity: 0;
+	}
+	20% {
+		opacity: 1;
+	}
+	80% {
+		opacity: 1;
+	}
+	90% {
+		opacity: 0;
+	}
+	100% {		
+		opacity: 0;
+	}
 }
