--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,11 @@ nav ul {
 	padding-right: 20px;
 }
 nav ul li {
-	flex-basis: 20%;	
-	align-self: center;
+	-ms-flex-preferred-size: 20%;
+	    flex-basis: 20%;	
+	-ms-flex-item-align: center;	
+	    -ms-grid-row-align: center;	
+	    align-self: center;
 }
 nav ul li a {	
 	display: block;
@@ -74,7 +77,7 @@ nav ul li:first-child a:hover {
 @media(max-width: 1024px) {
 	.navigation {
 		background-color: #333;
-		height: 140px;
+		height: 144px;
 		width: 100%;
 		box-shadow: 0 4px 10px -2px #aaa;
 	}
@@ -93,7 +96,7 @@ nav ul li:first-child a:hover {
 	 	width: 60px;
 	 	height: 40px;
 	 	transition: .2s;
-	 	z-index: 1; 	
+	 	z-index: 10; 	
 	}
 	.burger span {
 	 	position: absolute;
@@ -135,16 +138,21 @@ nav ul li:first-child a:hover {
 		top: 0px;
 	}
 	nav ul li {			
-		align-self: flex-end;
+		-ms-flex-item-align: end;			
+		    align-self: flex-end;
 	}
 }
 @media(max-width: 870px) {
 	nav ul {
-		flex-direction: column;
+		-ms-flex-direction: column;
+		    flex-direction: column;
 	}
 	nav ul li {
-		flex-basis: 15%;	
-		align-self: center;
+		-ms-flex-preferred-size: 15%;
+		    flex-basis: 15%;	
+		-ms-flex-item-align: center;	
+		    -ms-grid-row-align: center;	
+		    align-self: center;
 	}
 	nav ul li a {	
 		margin: 10px;
@@ -191,18 +199,18 @@ nav ul li:first-child a:hover {
 .banner {	 
 	position: relative;
 	max-width: 1280px;
-	margin: 245px auto 0;
+	margin: 0 auto;
 	width: 100%;
-	height: calc(100vh - 245px);
-	overflow: hidden;	
+	height: 100vh;
+	overflow: hidden;		
 }
 .banner-image {	
 	position: absolute;
-	top: 50%;
+	top: 60%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-	width: 100%;
-	height: 100vh;
+	min-width: 100%;
+	min-height: 100vh;
 	animation: moveImage 4s linear infinite;
 }
 .banner-text h1 {
@@ -220,7 +228,6 @@ nav ul li:first-child a:hover {
 	z-index: 1;
 	padding: 30px;
 	animation: moveText 4s linear infinite;
-
 }
 div.arrow {	
 	position: absolute;
@@ -230,6 +237,7 @@ div.arrow {
 	color: #fff;
 	z-index: 1;
 	cursor: pointer;
+	filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, .8));
 }
 .arrow-left {
 	left: 0;
@@ -280,5 +288,29 @@ section p {
 	}
 	100% {		
 		opacity: 0;
+	}
+}
+@media(max-width: 1024px) {
+	.banner {					
+		height: calc(100vh - 144px);		
+	}
+	.banner-text h1 {		
+		font-size: 42px;	
+	}
+}
+@media(max-width: 870px) {
+	.banner-text h1 {		
+		font-size: 36px;	
+	}
+}
+@media(max-width: 425px) {
+	.arrow-left {	
+		margin-left: 20px;
+	}
+	.arrow-right {	
+		margin-right: 20px;
+	}
+	.banner-text h1 {		
+		font-size: 30px;	
 	}
 }
