--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html {
 }
 /*nav*/
 nav {	
-	position: fixed;
+	position: relative;
 	top: 0;	
 	left: 0;
 	right: 0;	
@@ -48,7 +48,7 @@ nav ul li a {
 	transition: .5s;	  	
 }
 nav ul li:first-child a {
-	margin: 5px;
+	margin: 5px 5px 1px 5px;
 	padding: 0;	
 	box-shadow: none;
 }
@@ -77,7 +77,7 @@ nav ul li:first-child a:hover {
 @media(max-width: 1024px) {
 	.navigation {
 		background-color: #333;		
-		/*height: 114px;*/
+		height: 110px;
 		width: 100%;
 		box-shadow: 0 4px 10px -2px #aaa;
 	}
@@ -163,7 +163,7 @@ nav ul li:first-child a:hover {
 		margin: 5px;
 	}
 	nav {		
-	 	top: -110vh;	
+	 	top: -165vh;	
 	}
 }
 @media(max-width: 825px) and (orientation: landscape) {
@@ -192,7 +192,7 @@ nav ul li:first-child a:hover {
 		font-size: 18px;	  			  	
 	}
 	nav {		
-	 	top: -110vh;	
+	 	top: -130vh;	
 	}
 }
 
@@ -200,25 +200,25 @@ nav ul li:first-child a:hover {
 .welcome {
 	position: relative;
 	max-width: 1280px;
-	margin: 135px auto 0;
-	height: calc(100vh - 135px);
+	margin: 0 auto;
+	height: calc(100vh - 131px);
 	width: 100%;
-	background-image: url(../images/lavender.jpg);
+	background-image: url(../images/lavender1.jpg);
 	background-repeat: no-repeat;
 	-webkit-background-size: cover;
-	 background-size: cover; 
+	background-size: cover; 
 	background-position: center;	
 	text-align: center; 
 }
 .welcome-wrap {
 	position: absolute;
-	height: calc(100vh - 135px);
+	height: calc(100vh - 131px);
 	width: 100%;
 	background-color: rgba(0, 0, 0, 0.6);
 }
 .welcome h1 {
 	font-family: 'Charmonman', cursive;
-	font-size: 100px;
+	font-size: 90px;
 	color: #9595ea;	
 	text-transform: capitalize; 
 	text-shadow: 0px 0px 1px #222;	
@@ -227,10 +227,11 @@ nav ul li:first-child a:hover {
 	margin-top: -70px;
 }
 .welcome h2 {	
-	font-size: 50px;
-	margin: 30px 15px;
+	font-size: 48px;
+	margin: 20px 15px;
 	text-transform: uppercase;
 	color: #fff;
+	letter-spacing: 3px
 }
 .welcome p {
 	font-size: 40px;
@@ -239,7 +240,7 @@ nav ul li:first-child a:hover {
 }
 .welcome button.arrow-down {
 	position: absolute;
-	bottom: 10%;
+	bottom: 4%;
 	left: 50%;
 	transform: translateX(-50%);
 	width: 60px;
@@ -453,7 +454,8 @@ div.arrow {
 }
 @media(max-width: 1024px) {
 	.banner {					
-		height: calc(100vh - 144px);		
+		/*height: calc(100vh - 131px);		*/
+		height: 100vh;
 	}
 	.banner-text h1 {		
 		font-size: 42px;	
