--- a/css/style.css
+++ b/css/style.css
@@ -77,12 +77,13 @@ nav ul li:first-child a:hover {
 @media(max-width: 1024px) {
 	nav {	
 		position: fixed;
+		top: -110vh;
 	}
 	.navigation {
-		background-color: #333;		
+		/*background-color: #333;		
 		height: 110px;
 		width: 100%;
-		box-shadow: 0 4px 10px -2px #aaa;
+		box-shadow: 0 4px 10px -2px #aaa;*/
 	}
 	.minilogo {
 		display: block;
@@ -133,9 +134,6 @@ nav ul li:first-child a:hover {
 	}
 	.burger.active {
 		transform: rotate(-90deg);
-	}
-	nav {		
-	 	top: -110vh;	
 	}
 	nav.active {
 		top: 0px;
@@ -211,7 +209,7 @@ nav ul li:first-child a:hover {
 	position: relative;
 	max-width: 1280px;
 	margin: 0 auto;
-	height: calc(100vh - 131px);
+	height: 100vh;
 	width: 100%;
 	background-image: url(../images/lavender1.jpg);
 	background-repeat: no-repeat;
@@ -222,7 +220,7 @@ nav ul li:first-child a:hover {
 }
 .welcome-wrap {
 	position: absolute;
-	height: calc(100vh - 131px);
+	height: 100vh;
 	width: 100%;
 	background-color: rgba(0, 0, 0, 0.6);
 }
@@ -281,20 +279,15 @@ nav ul li:first-child a:hover {
 	}
 }
 @media(max-width: 1024px) {
-	.welcome {	
-		margin: 0 auto;
-		height: calc(100vh - 110px); 
-	}
-	.welcome-wrap {
-		height: calc(100vh - 110px);
-	}
 	.welcome h1 {
+		margin-top: 50px;
 		font-size: 80px;
 	}
 	.welcome h1~h1 {
 		margin-top: -60px;
 	}
 	.welcome h2 {	
+		margin: 30px 30px 60px;
 		font-size: 40px;
 	}
 	.welcome p {
