--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html {
 }
 /*nav*/
 nav {	
-	position: relative;
+	position: fixed;
 	top: 0;	
 	left: 0;
 	right: 0;	
@@ -152,13 +152,6 @@ nav ul li .btn-4:hover{
 		font-size: 20px;    	
 	}	
 }
-@media(max-width: 825px) and (orientation: landscape) {
-	/*nav ul li:first-child a {
-		margin: -55px;
-		padding: 10px;
-		transform: scale(0.4);
-	}*/
-}
 @media(max-width: 420px) and (orientation: portrait) {
 	nav ul {
 		height: 100vh;
@@ -176,7 +169,7 @@ nav ul li .btn-4:hover{
 .welcome {
 	position: relative;
 	max-width: 1280px;
-	margin: 0 auto;
+	margin: 80px auto 0;
 	height: calc(100vh - 80px);
 	width: 100%;
 	background-image: url(../images/lavender1.jpg);
@@ -340,6 +333,29 @@ nav ul li .btn-4:hover{
 		font-size: 40px;
 	}
 }
+/*about us*/
+.about-us {
+	position: relative;
+	top: 0;
+	left: 0;
+	max-width: 1280px;
+	margin: 0 auto;
+	height: 400px;
+	display: flex;
+}
+.about-us div.text {
+	flex-grow: 1;	
+}
+.about-us div.text h1, .about-us div.text p, .about-us img  {
+	margin: 50px;
+}
+.about-us div.text p {
+	line-height: 150%;
+}
+.about-us img {
+	flex-basis: 50%;
+}
+
 /*banner*/
 .banner {	 
 	position: relative;
