--- a/css/style.css
+++ b/css/style.css
@@ -13,15 +13,14 @@ nav {
 	left: 0;
 	right: 0;	
 	background-color: #222;			
-	/*box-shadow: 0 4px 10px -2px #aaa;*/
 	transition: .3s;
 	z-index: 2;
 }
 nav ul {
 	display: -ms-flexbox;
-	display: flex;	
-  -ms-flex-pack: end;	
-      justify-content: flex-end;
+	display: flex;
+  -ms-flex-pack: start;
+      justify-content: flex-start;
 	max-width: 1280px;
 	margin: 0 auto;
 	height: 80px;
@@ -30,12 +29,16 @@ nav ul {
 	overflow: hidden;
 }
 nav ul li {
-	-ms-flex-preferred-size: 15%;
-	    flex-basis: 15%;	
-	-ms-flex-item-align: center;	
-	    -ms-grid-row-align: center;	
+	-ms-flex-preferred-size: 10%;
+	    flex-basis: 10%;
+	-ms-flex-item-align: center;
+	    -ms-grid-row-align: center;
 	    align-self: center;
   display: inline-block;
+}
+nav ul li.logo {
+	-ms-flex-positive: 1;
+	    flex-grow: 1;
 }
 nav ul li a {	
 	display: block;
@@ -47,12 +50,12 @@ nav ul li a {
 	color: #fff;
 	letter-spacing: 2px;
 	transition: .3s;	
-	margin: 0 10px;  	
+	margin: 0;  	
 	box-sizing: content-box;
 }
 nav ul li:first-child a {
 	padding: 0;	
-	margin-left: -400px;
+	/*margin-left: -450px;*/
 }
 nav ul li .btn-1:hover {
 	color: #c4bdff;
@@ -348,10 +351,12 @@ nav ul li .btn-4:hover{
 	max-width: 1280px;
 	margin: 0 auto;
 	height: 400px;
+	display: -ms-flexbox;
 	display: flex;
 }
 .about-us div.text {	
-	flex-basis: 60%;
+	-ms-flex-preferred-size: 60%;	
+	    flex-basis: 60%;
 }
 .about-us div.text h1, .about-us div.text p, .about-us div.image  {
 	margin: 50px;
@@ -361,7 +366,8 @@ nav ul li .btn-4:hover{
 	text-align: justify;
 }
 .about-us div.image {
-  flex-grow: 1;	
+  -ms-flex-positive: 1;
+      flex-grow: 1;	
   background-image: url(../images/5.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -391,11 +397,13 @@ nav ul li .btn-4:hover{
 }
 @media(max-width: 820px) and (orientation: portrait) {
 	.about-us {
-		flex-direction: column;
+		-ms-flex-direction: column;
+		    flex-direction: column;
 		height: 80vh;
 	}
 	.about-us div.text {	
-		flex-basis: 40%;
+		-ms-flex-preferred-size: 40%;	
+		    flex-basis: 40%;
 	}
 	.about-us div.image {
 		position: relative; 
@@ -464,7 +472,7 @@ div.arrow {
 	position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
-	font-size: 60px;
+	font-size: 44px;
 	color: #fff;
 	z-index: 1;
 	cursor: pointer;
@@ -549,7 +557,7 @@ div.arrow {
 }
 @media(max-width: 640px) {
 	div.arrow {	
-		font-size: 50px;
+		font-size: 34px;
 	}
 	.arrow-left {	
 		margin-left: 20px;
@@ -579,9 +587,12 @@ div.arrow {
 	text-transform: uppercase;
 }
 .gallery .album {
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-ms-flex-pack: center;
+	    justify-content: center;
 }
 .gallery .album a img {
 	margin: 30px 15px 5px;
@@ -797,7 +808,7 @@ div.arrow {
 
 
 footer {
-	background-color: #333;	
+	background-color: #222;	
 	text-align: center;
 }
 footer p {
