--- a/css/prefixed.css
+++ b/css/prefixed.css
@@ -22,9 +22,9 @@ nav ul {
 	display: -webkit-box;
 	display: -webkit-flex;
 	display: flex;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-      -ms-flex-pack: start;
+  -ms-flex-pack: start;
+      -webkit-box-pack: start;
+      -webkit-justify-content: flex-start;
           justify-content: flex-start;
 	max-width: 1280px;
 	margin: 0 auto;
@@ -34,19 +34,19 @@ nav ul {
 	overflow: hidden;
 }
 nav ul li {
-	-webkit-flex-basis: 10%;
-	    -ms-flex-preferred-size: 10%;
+	-ms-flex-preferred-size: 10%;
+	    -webkit-flex-basis: 10%;
 	        flex-basis: 10%;
-	-webkit-align-self: center;
-	    -ms-flex-item-align: center;
-	            -ms-grid-row-align: center;
+	-ms-flex-item-align: center;
+	    -ms-grid-row-align: center;
+	    -webkit-align-self: center;
 	        align-self: center;
   display: inline-block;
 }
 nav ul li.logo {
-	-webkit-box-flex: 1;
-	-webkit-flex-grow: 1;
-	    -ms-flex-positive: 1;
+	-ms-flex-positive: 1;
+	    -webkit-box-flex: 1;
+	    -webkit-flex-grow: 1;
 	        flex-grow: 1;
 }
 nav ul li a {	
@@ -838,7 +838,17 @@ div.arrow {
 	    -webkit-flex-basis: 60%;
 	        flex-basis: 60%;
 	background-color: #555;	
+	position: relative;
+	left: 0;
+	top: 0;
 } 
+.contact .map div#map {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 80vh;
+}
 @media (max-width: 1024px) {
 	.contact .information .wrap {
 		padding: 0 15px;
